--- a/experience.html
+++ b/experience.html
@@ -25,15 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>As a designer who has always been excited about building, I'd like to master these languages first:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I want work with a life-changing company that helps people create their dreams, or an awesome gaming company that changes lives with their franchises.</p>
       </div> 
 
     </main>
